Initial port to Minecraft 1.19.3
Based off https://github.com/mo0dss/radon-fabric/commit/2e0825bb6b07d5b351714dbc49872fb672f7988d#diff-afbbfa19ea09d5508ae6c8413e5521aa001fe780b98e12528d02e93af8acbd2b

This commit has tons of issues and shouldn't be used :)